# pynsee

./: .black  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  .travis.yml.txt  CONTRIBUTING.md  DCO.txt  Dockerfile  LICENSE.md  MANIFEST.in  NEWS.md  README.md  README.rst  _quarto.yml  arrondissements-municipaux  benchmark_pynsee_artifacts.ods  codecov.yml  coverage.xml  examples.yml  meta.yaml  pyproject.toml  pyproject.toml.old  requirements-dev.txt  requirements-extra.txt  requirements.txt  requirements_examples.txt  secrets_template.yaml  setup.py  split_tests.py  tests_commands.txt
.circleci/: config.yml
.github/: workflows.yml
.github/workflows/: docker.yml  examples.yml  gallery.yml  insee-macrodata-test.yml  master.yml  pkgTests.yml  pkgTests_pull_requests.yml  pynsee-test.yml  recover.yml  release.yml  test_nb_examples_and_idbank_downlaod.yml  wheels.yml
docs/: age_pyramid.ipynb  api_subscription.rst  conf.py  environment.yml  examples.rst  get_data.rst  index.rst  modules.rst  readme.rst  requirements.txt  search_data.rst  search_macro.rst  utils.rst
docs/_static/: my_theme.css
docs/examples/: POPMOB2.py  convert_to_notebook.sh  example_age_pyramid.ipynb  example_automotive_industry.ipynb  example_automotive_industry_sirene.ipynb  example_automotive_industry_sirene.md  example_automotive_industry_sirene.qmd  example_cadre_iris_idf.ipynb  example_cadre_iris_idf.qmd  example_commute_paris.ipynb  example_deaths_births.ipynb  example_deaths_births.md  example_deaths_births.qmd  example_doctors.ipynb  example_doctors_idf.ipynb  example_doctors_idf.qmd  example_download.qmd  example_download_website.ipynb  example_download_website.md  example_download_website.qmd  example_empl_sector_dep.ipynb  example_empl_sector_dep.qmd  example_gdp_growth_rate_yoy.ipynb  example_gdp_growth_rate_yoy.md  example_gdp_growth_rate_yoy.qmd  example_inflation_contribution.ipynb  example_inflation_yoy.ipynb  example_inflation_yoy.md  example_inflation_yoy.qmd  example_insee_premises_sirene.ipynb  example_insee_premises_sirene.md  example_insee_premises_sirene.qmd  example_marie_firstname.ipynb  example_marie_firstname.qmd  example_mobpro.py  example_population_map.md  example_population_map_com.ipynb  example_population_map_com.md  example_population_map_com.qmd  example_population_map_dep.ipynb  (+14 more)
example/: example_gdp_growth_rate_yoy.ipynb  example_gdp_growth_rate_yoy.py  example_inflation_yoy.py  example_search.py
examples/: example_age_pyramid.ipynb  example_deaths_births.ipynb  example_gdp_growth_rate_yoy.ipynb  example_inflation_yoy.ipynb  example_local_data.py  example_poverty_paris_urban_area.ipynb  example_poverty_paris_urban_area.py  example_search.ipynb  plot_automotive_industry_sites.py  plot_deaths_births.py  plot_gdp.py  plot_inflation.py  plot_insee_premises.py  plot_population_map.py  plot_population_pyramid.py
insee_macrodata/: __init__.py  _clean_insee_folder.py  _create_insee_folder.py  _download_idbank_list.py  _get_dataset_dimension.py  _get_dataset_metadata.py  _get_date.py  _get_dimension_values.py  _get_envir_token.py  _get_geo_relation.py  _get_idbank_internal_data.py  _get_idbank_internal_data_harmonized.py  _get_insee.py  _get_list_geo.py  _get_token.py  _paste.py  _request_insee.py  get_column_title.py  get_dataset_list.py  get_geo_list.py  get_idbank_list.py  get_insee.py  get_insee_dataset.py  get_insee_idbank.py  search_insee.py  split_title.py
insee_macrodata/data/: idbank_list_internal.csv
pynsee/: __init__.py  constants.py
pynsee/catalog/: __init__.py  get_dataset_identifier_list.py
pynsee/download/: __init__.py  _add_metadata.py  _check_url.py  _check_year_available.py  _download_pb.py  _download_store_file.py  _download_store_file2.py  (+17 more)
tests/: __init__.py  conftest.py  test_insee_macrodata.py  test_pynsee.py
(+242 files in other folders)
