[tool.poetry]
name = "pynsee"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
pyarrow = "^17.0.0"
tqdm = "^4.66.5"
platformdirs = "^4.2.2"
unidecode = "^1.3.8"
urllib3 = ">=1.25.4,<1.27"
shapely = "^2.0.5"
openpyxl = "^3.1.5"
xlrd = "^2.0.1"
pebble = "^5.0.7"
requests = "^2.32.3"
requests-cache = "^1.2.1"


[tool.poetry.group.dev.dependencies]
geopandas = "^1.0.1"
spyder = "^5.5.5"
pyqt5-qt5 = "5.15.2"
pyqtwebengine-qt5 = "5.15.2"
black = "^24.8.0"
pytest = "^8.3.2"
py7zr = "^0.22.0"
s3fs = "^2024.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
