[project]
name = "pynsee"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
pandas = ">=2.3.3,< 3.0"
geopandas = ">=1.1.3,< 2.0"
pyarrow = ">=23.0.1"
# pyogrio = ">=0.12.1"
tqdm = ">=4.56"
platformdirs = ">=4"
unidecode = ">=1.3"
urllib3 = ">=2.2"
shapely = ">=2.1.2"
requests = ">=2.32"
requests-ratelimiter = ">=0.7"
openpyxl = "^3.1.5"
xlrd = ">2.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
setuptools ="<82.0"
spyder = "^6.1.3"
pytest = "^9.0.2"
matplotlib = "^3.10.8"
parameterized = "^0.9.0"
aiohttp = ">=3.13.4"
cffi = ">=2.0.0"
jellyfish = ">= 1.2.1"
pyqt5-sip = ">=12.18.0"
ujson = ">= 5.12.0"
pytest-xdist = "^3.8.0"
black = "^26.3.1"
pytest-cov = "^7.1.0"
nbconvert = "^7.17.0"
descartes = "^1.1.0"
flake8 = "7.1.2"

[tool.black]
include = '\.py$'
line-length = 79
